--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -140,6 +140,53 @@
                         android:padding="0dp" />
 
                 </LinearLayout>
+
+
+                <LinearLayout
+                    style="@style/block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/block_text"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/mainText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:hint="Премиум" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@color/panelColor"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/noPremiumGuestServiceText"
+                            style="@style/textItemSolid"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="@string/premium"
+                            android:textColor="@color/white"
+                            android:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/yesPremiumGuestServiceText"
+                            style="@style/textItemSolid"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/yellow"
+                            android:gravity="center"
+                            android:text="@string/premium"
+                            android:textColor="@color/black"
+                            android:visibility="gone" />
+                    </LinearLayout>
+                </LinearLayout>
+
             </LinearLayout>
 
             <!-- Нижняя часть фотографии и кнопка-->
@@ -169,13 +216,6 @@
 
                         </LinearLayout>
                     </HorizontalScrollView>
-
-                    <Button
-                        android:id="@+id/premiumGuestServiceBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Премиум"
-                        android:visibility="gone" />
                 </LinearLayout>
 
                 <Button
