--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -163,6 +163,12 @@
         <item name="android:progressTint">@color/yellow</item>
     </style>
 
+    <style name="ratingBarColorsPremium" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressBackgroundTint">@color/black</item>
+        <item name="android:secondaryProgressTint">@color/black</item>
+        <item name="android:progressTint">@color/panelColor</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
