--- a/app/src/main/res/layout/element_order.xml
+++ b/app/src/main/res/layout/element_order.xml
@@ -22,15 +22,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/nameAddServiceTB" />
+                android:text="Услуга" />
 
             <TextView
                 android:id="@+id/durationProfileOrderElementText"
-                android:layout_width="130dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="end"
-                android:text="20.05 00:00 - 00:00"
+                android:text="20 апр, пт 00:00 - 00:00"
                 android:textColor="@color/mainBlue" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
