--- a/app/src/main/res/layout/fragment_premium.xml
+++ b/app/src/main/res/layout/fragment_premium.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/DefaultTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,7 +21,6 @@
             style="@style/mainBlockText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
             android:text="Премиум" />
 
@@ -58,7 +57,8 @@
     <LinearLayout
         android:id="@+id/fragment_premium_ll_bottom"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
@@ -66,12 +66,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/description"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
 
             <TextView
                 style="@style/ServiceBodyText"
@@ -91,12 +85,12 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.button.MaterialButton
+        <com.bunbeauty.ideal.myapplication.clean_architecture.mvp.custom.ProgressButton
             android:id="@+id/fragment_premium_btn_set"
-            style="@style/largeButton"
-            android:layout_gravity="center"
+            style="@style/mainButton"
             android:layout_marginTop="10dp"
-            android:text="Получить премиум"/>
-
+            android:text="Получить премиум" />
     </LinearLayout>
+
+
 </LinearLayout>
